--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,9 @@
         <start-class>com.github.akraskovski.Application</start-class>
         <java.version>11</java.version>
         <spring-cloud.version>2020.0.0</spring-cloud.version>
+
+        <graalvm.version>21.0.0</graalvm.version>
+        <spring-graalvm-native.version>0.8.5</spring-graalvm-native.version>
     </properties>
 
     <repositories>
@@ -38,7 +41,7 @@
         <dependency>
             <groupId>org.springframework.experimental</groupId>
             <artifactId>spring-graalvm-native</artifactId>
-            <version>0.8.5</version>
+            <version>${spring-graalvm-native.version}</version>
         </dependency>
 
         <dependency>
@@ -53,10 +56,14 @@
         <!--        </dependency>-->
 
         <!-- JPA -->
-<!--        <dependency>-->
-<!--            <groupId>org.springframework.boot</groupId>-->
-<!--            <artifactId>spring-boot-starter-data-jpa</artifactId>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+        </dependency>
 
         <!-- Web -->
         <dependency>
@@ -77,6 +84,10 @@
             <groupId>org.apache.tomcat.experimental</groupId>
             <artifactId>tomcat-embed-programmatic</artifactId>
             <version>${tomcat.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
 
         <!--        todo: doesn't work-->
@@ -114,10 +125,10 @@
             <plugin>
                 <groupId>org.graalvm.nativeimage</groupId>
                 <artifactId>native-image-maven-plugin</artifactId>
-                <version>21.0.0</version>
+                <version>${graalvm.version}</version>
                 <configuration>
                     <imageName>app</imageName>
-                    <buildArgs>-J-Xmx4G
+                    <buildArgs>-J-Xmx8G
                         -H:TraceClassInitialization=true
                         -H:+ReportExceptionStackTraces
                         -Dspring.native.remove-yaml-support=true
