--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,17 +3,17 @@
 #####################################################
 spring:
   datasource:
-    url: jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
-    username: ${DB_USER}
-    password: ${DB_PASSWORD}
+# todo: wait for postgres working integration
+#    url: jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
+#    username: ${DB_USER}
+#    password: ${DB_PASSWORD}
     hikari:
       minimumIdle: 2
       idleTimeout: 120000
       maxLifetime: 900000
   jpa:
     hibernate:
-      ddl-auto: none
-    properties.hibernate.jdbc.lob.non_contextual_creation: true
+      ddl-auto: create-drop
   rabbitmq:
     host: ${RABBITMQ_HOST}
     port: ${RABBITMQ_PORT}
