--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -1,4 +1,4 @@
-name: Run tests
+name: Test and Build Native Image
 
 on:
   pull_request:
@@ -14,7 +14,7 @@ jobs:
         with:
           java-version: 11
           graalvm-version: 21.0.0
-          native-image: false
+          native-image: true
       - name: Cache local Maven repository
         uses: actions/cache@v2
         with:
@@ -23,4 +23,4 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-maven-
       - name: Build with Maven
-        run: ./mvnw --update-snapshots clean test #todo: split into failsafe and surefire plugin goals
+        run: ./mvnw --update-snapshots clean package
